{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 158,
  "lineage": "dc3f0b05-fc2c-4a50-f150-eb9c639c8c1e",
  "resources": [
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:426857564226:loadbalancer/app/load-balancer-tf/3bb99e4c244a0f0a",
            "arn_suffix": "app/load-balancer-tf/3bb99e4c244a0f0a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "load-balancer-tf-1096186717.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:426857564226:loadbalancer/app/load-balancer-tf/3bb99e4c244a0f0a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "load-balancer-tf",
            "security_groups": [
              "sg-0652c4e16e0e2864d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04ba59fc2cdc981f5"
              },
              {
                "subnet_id": "subnet-0f1542c22c1221d16"
              }
            ],
            "subnets": [
              "subnet-04ba59fc2cdc981f5",
              "subnet-0f1542c22c1221d16"
            ],
            "tags_all": {
              "owner": "krishna",
              "project": "asg terraform",
              "silo": "devsecops",
              "terraform": "true"
            },
            "vpc_id": "vpc-00c04dc8ced642b98",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg",
            "module.vpc.aws_subnet.subnet1",
            "module.vpc.aws_subnet.subnet2",
            "module.vpc.aws_vpc.krishna"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:426857564226:listener/app/load-balancer-tf/3bb99e4c244a0f0a/0673fedc570e28ef",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:426857564226:targetgroup/test-tg/4a12e18a332ec1d9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:426857564226:listener/app/load-balancer-tf/3bb99e4c244a0f0a/0673fedc570e28ef",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:426857564226:loadbalancer/app/load-balancer-tf/3bb99e4c244a0f0a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "owner": "krishna",
              "project": "asg terraform",
              "silo": "devsecops",
              "terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_alb.load_balancer",
            "module.lb.aws_lb_target_group.target_group",
            "module.vpc.aws_security_group.sg",
            "module.vpc.aws_subnet.subnet1",
            "module.vpc.aws_subnet.subnet2",
            "module.vpc.aws_vpc.krishna"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:426857564226:targetgroup/test-tg/4a12e18a332ec1d9",
            "arn_suffix": "targetgroup/test-tg/4a12e18a332ec1d9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 120,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:426857564226:targetgroup/test-tg/4a12e18a332ec1d9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "test-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "owner": "krishna",
              "project": "asg terraform",
              "silo": "devsecops",
              "terraform": "true"
            },
            "target_type": "instance",
            "vpc_id": "vpc-00c04dc8ced642b98"
          },
          "dependencies": [
            "module.vpc.aws_vpc.krishna"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426857564226:internet-gateway/igw-0d734c05bf7045378",
            "id": "igw-0d734c05bf7045378",
            "owner_id": "426857564226",
            "tags_all": {
              "owner": "krishna",
              "project": "asg terraform",
              "silo": "devsecops",
              "terraform": "true"
            },
            "vpc_id": "vpc-00c04dc8ced642b98"
          },
          "dependencies": [
            "module.vpc.aws_vpc.krishna"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "subnet1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426857564226:route-table/rtb-028c7e62bcef845c0",
            "id": "rtb-028c7e62bcef845c0",
            "owner_id": "426857564226",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d734c05bf7045378",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "owner": "krishna",
              "project": "asg terraform",
              "silo": "devsecops",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c04dc8ced642b98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.krishna"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "subnet2_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426857564226:route-table/rtb-07db04f8e1770563a",
            "id": "rtb-07db04f8e1770563a",
            "owner_id": "426857564226",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d734c05bf7045378",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "owner": "krishna",
              "project": "asg terraform",
              "silo": "devsecops",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c04dc8ced642b98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.krishna"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet1_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d862dee520453d73",
            "route_table_id": "rtb-028c7e62bcef845c0",
            "subnet_id": "subnet-04ba59fc2cdc981f5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.subnet1_route_table",
            "module.vpc.aws_subnet.subnet1",
            "module.vpc.aws_vpc.krishna"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet2_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7c29c4fb57a9b4b",
            "route_table_id": "rtb-07db04f8e1770563a",
            "subnet_id": "subnet-0f1542c22c1221d16"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.subnet2_route_table",
            "module.vpc.aws_subnet.subnet2",
            "module.vpc.aws_vpc.krishna"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426857564226:security-group/sg-0652c4e16e0e2864d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0652c4e16e0e2864d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240112064404349400000001",
            "name_prefix": "terraform-",
            "owner_id": "426857564226",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "owner": "krishna",
              "project": "asg terraform",
              "silo": "devsecops",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c04dc8ced642b98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.krishna"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426857564226:subnet/subnet-04ba59fc2cdc981f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ba59fc2cdc981f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "426857564226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "owner": "krishna",
              "project": "asg terraform",
              "silo": "devsecops",
              "terraform": "true"
            },
            "vpc_id": "vpc-00c04dc8ced642b98"
          },
          "dependencies": [
            "module.vpc.aws_vpc.krishna"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426857564226:subnet/subnet-0f1542c22c1221d16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1542c22c1221d16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "426857564226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "owner": "krishna",
              "project": "asg terraform",
              "silo": "devsecops",
              "terraform": "true"
            },
            "vpc_id": "vpc-00c04dc8ced642b98"
          },
          "dependencies": [
            "module.vpc.aws_vpc.krishna"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "krishna",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:426857564226:vpc/vpc-00c04dc8ced642b98",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0776d3b1042f7332e",
            "default_route_table_id": "rtb-084c8b4a9cad9e20b",
            "default_security_group_id": "sg-0e8e43353ff8eda2a",
            "dhcp_options_id": "dopt-0e37c64a8c849a8fc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00c04dc8ced642b98",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084c8b4a9cad9e20b",
            "owner_id": "426857564226",
            "tags_all": {
              "owner": "krishna",
              "project": "asg terraform",
              "silo": "devsecops",
              "terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}